feat: canal de ordenes del mando de la TV al telefono
